log
s치., 19 de mar. de 2022 16:28:47: 
 tests:  0|6
total_score: 0/70
1893bd1
s치., 19 de mar. de 2022 16:32:03: 
 list.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 15/70
0bca006
s치., 19 de mar. de 2022 16:33:10: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:9: error: conflicting types for 'dato'
   List* dato = (List*) malloc (sizeof(List));
         ^~~~
list.c:32:10: note: previous declaration of 'dato' was here
     List dato;
          ^~~~
Compilation failed
9fb0188
s치., 19 de mar. de 2022 16:33:24: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:9: error: redeclaration of 'dato' with no linkage
   List* dato = (List*) malloc (sizeof(List));
         ^~~~
list.c:32:11: note: previous declaration of 'dato' was here
     List *dato;
           ^~~~
Compilation failed
bec436b
